[package]
name = "tomala-space-program"
version = "0.1.0"
authors = ["Kamil Tomala <kamil.tomala@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.18.0"

[dependencies.kiss3d]
version = "0.20.1"
features = ["conrod"]